gcc/testsuite/rust/rustc/ui/parser/macro-keyword.rs
fn macro() {  // { dg-error "" "" { target *-*-* } }
}

pub fn main() {
}

